2013-06-08 Valentin Dudouyt <valentin dudouyt AT gmail.com>
	* src/stm8/main.c,
	* src/stm8/peep.h,
	* src/stm8/peep.c:
	Implemented stm8instructionSize.

2013-06-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp:
	  Cleanup debugging code in lospre.

2013-06-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  tests/bug-2181.c:
	  Fix bug #2181.

2013-06-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdcc.sln,
	* src/stm8/stm8.vcxproj,
	* src/stm8/stm8.vcxproj.filters: added stm8 project
	* src/hc08/hc08.vcxproj,
	* src/z80/z80.vcxproj,
	* src/sdcc.vcxproj: use boost 1.50, the last working installer from boostpro
	* debugger/mcs51/symtab.h,
	* src/ds390/gen.c,
	* src/hc08/gen.c,
	* src/mcs51/gen.c,
	* src/pic14/gen.c,
	* src/pic16/gen.c,
	* src/pic16/glue.c,
	* src/SDCCast.c,
	* src/SDCCdwarf2.c,
	* src/SDCCglue.c,
	* src/SDCCsymt.h,
	* src/z80/gen.c: fixed signed/unsigned comparison warnings
	* src/stm8/gen.c: fixed errors for MSVC (C89 compatible only):
	  don't use snprintf but only SNPRINT,
	  only declarations at start of block,
	  don't use true/false but only TRUE/FALSE
	* src/stm8/main.c (stm8_defaultRules): fixed init error
	* src/stm8/ralloc2.cc (instruction_cost): fixed warning
	* src/SDCCglue.c (glue): removed target dependent code
	* support/regression/fwk/include/testfwk.h: removed ASSERT_FAILED,
	  added ASSERTFALSE
	* support/regression/tests/gcc-torture-execute-20050826-1.c: use ASSERFALSE,
	  enabled test for mcs51
	* support/regression/tests/gcc-torture-execute-920810-1.c: use ASSERTFALSE

2013-06-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient register-to-register assignment using ldw.

2013-06-02 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/stm8.src/inst.cc:
	  Fix handling of N and Z flags in addw, subw.
	* support/regression/tests/gcc-torture-execute-20021120-1.c:
	  Disable failing test for stm8 (bug #2180).
	* src/stm8/gen.c:
	  More efficient subtraction.